[package]
name = "mmkv"
version = "0.1.1"
edition = "2021"
authors = ["Kexuan Yang <kexuan.yang@gmail.com>"]
description = "Rust version of MMKV"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangkx1024/MMKV"
keywords = ["key-value", "mmkv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2.0"
memmap2 = "0.7.1"
crc = "3.0.1"
eax = { version = "0.5.0", features = ["stream"] }
aes = "0.8.3"
hex = "0.4.3"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
