[package]
name = "mmkv"
version = "0.3.2"
edition = "2021"
authors = ["Kexuan Yang <kexuan.yang@gmail.com>"]
description = "Rust version of MMKV"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangkx-1024/MMKV"
keywords = ["key-value", "mmkv"]
exclude = [
    "android", "ios", "build_android.sh", "build_apple.sh", "Package.swift"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.3.0"
memmap2 = "0.9.0"
crc = "3.0.1"
eax = { version = "0.5.0", features = ["stream"], optional = true }
aes = { version = "0.8.3", optional = true }
hex = { version = "0.4.3", optional = true }
mmkv-proc-macro-lib = { version = "0" }

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"

[features]
default = []
encryption = ["dep:eax", "dep:aes", "dep:hex"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
