[package]
name = "mmkv"
version = "0.5.3"
edition = "2021"
authors = ["Kexuan Yang <kexuan.yang@gmail.com>"]
description = "Rust version of MMKV"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangkx-1024/MMKV"
keywords = ["key-value", "mmkv"]
exclude = [
    "android", "ios", "build.sh", "build_android.sh",
    "build_apple.sh", "Package.swift", ".fleet", ".github",
    ".space"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.7.2"
libc = "0.2.171"
crc = "3.2.1"
eax = { version = "0.5.0", features = ["stream"], optional = true }
aes = { version = "0.8.4", optional = true }
hex = { version = "0.4.3", optional = true }
mmkv-proc-macro-lib = { version = "0.0.3" }
chrono = { version = "0.4.40" }
once_cell = { version = "1.21.0" }

[build-dependencies]
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.1.0"

[features]
default = []
encryption = ["dep:eax", "dep:aes", "dep:hex"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", features = ["invocation"] }

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
