[package]
name = "mmkv-proc-macro-lib"
version = "0.0.2"
edition = "2021"
authors = ["Kexuan Yang <kexuan.yang@gmail.com>"]
description = "Proc macro lib of Rust version of MMKV"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yangkx-1024/MMKV"
keywords = ["key-value", "mmkv", "macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full","extra-traits"] }